--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
         ]
     },
     "dependencies": {
+        "@ai-sdk/openai": "^0.0.36",
         "@dnd-kit/core": "6.1.0",
         "@dnd-kit/modifiers": "7.0.0",
         "@dnd-kit/sortable": "8.0.0",
@@ -44,6 +45,7 @@
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "@uploadthing/react": "6.7.2",
+        "ai": "^3.2.24",
         "autoprefixer": "10.4.19",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
@@ -60,7 +62,10 @@
         "react-day-picker": "8.10.1",
         "react-dom": "18.2.0",
         "react-hook-form": "7.52.1",
+        "react-markdown": "9.0.1",
+        "react-syntax-highlighter": "15.5.0",
         "recharts": "2.12.7",
+        "remark-gfm": "4.0.0",
         "sharp": " 0.33.4",
         "tailwind-merge": "2.4.0",
         "tailwindcss": "3.4.5",
@@ -72,11 +77,22 @@
         "zustand": "4.5.4"
     },
     "devDependencies": {
+        "@tailwindcss/typography": "^0.5.10",
+        "@types/node": "^20",
+        "@types/react": "^18",
+        "@types/react-dom": "^18",
+        "@types/react-syntax-highlighter": "^15.5.10",
         "@types/uuid": "^9.0.7",
         "@typescript-eslint/eslint-plugin": "^6.11.0",
+        "autoprefixer": "^10.0.1",
+        "eslint": "^8",
+        "eslint-config-next": "14.0.3",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.7",
+        "postcss": "^8",
         "prettier": "3.0.3",
-        "prettier-plugin-tailwindcss": "^0.5.14"
+        "prettier-plugin-tailwindcss": "^0.5.14",
+        "tailwindcss": "^3.3.0",
+        "typescript": "^5"
     }
 }
