--- a/package.json
+++ b/package.json
@@ -58,9 +58,9 @@
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
-        "react": "18.2.0",
+        "react": "18.3.1",
         "react-day-picker": "8.10.1",
-        "react-dom": "18.2.0",
+        "react-dom": "18.3.1",
         "react-hook-form": "7.52.1",
         "react-markdown": "9.0.1",
         "react-syntax-highlighter": "15.5.0",
@@ -94,5 +94,6 @@
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
-    }
+    },
+    "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
 }
