--- a/package.json
+++ b/package.json
@@ -16,12 +16,13 @@
         ]
     },
     "dependencies": {
-        "@ai-sdk/openai": "^0.0.36",
+        "@ai-sdk/openai": "0.0.36",
         "@dnd-kit/core": "6.1.0",
         "@dnd-kit/modifiers": "7.0.0",
         "@dnd-kit/sortable": "8.0.0",
         "@dnd-kit/utilities": "3.2.2",
         "@hookform/resolvers": "3.9.0",
+        "@next/bundle-analyzer": "14.2.5",
         "@radix-ui/react-accordion": "1.2.0",
         "@radix-ui/react-alert-dialog": "1.1.1",
         "@radix-ui/react-avatar": "1.1.0",
@@ -58,9 +59,9 @@
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
-        "react": "18.3.1",
+        "react": "18.2.0",
         "react-day-picker": "8.10.1",
-        "react-dom": "18.3.1",
+        "react-dom": "18.2.0",
         "react-hook-form": "7.52.1",
         "react-markdown": "9.0.1",
         "react-syntax-highlighter": "15.5.0",
