--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
         "@radix-ui/react-tabs": "1.1.0",
         "@radix-ui/react-toast": "1.2.1 ",
         "@radix-ui/react-tooltip": "1.1.2",
+        "@radix-ui/react-visually-hidden": "^1.1.0",
         "@tanstack/react-table": "8.19.3",
         "@types/node": "20.5.7",
         "@types/react": "18.2.21",
@@ -65,7 +66,7 @@
         "react-hook-form": "7.52.1",
         "react-markdown": "9.0.1",
         "react-syntax-highlighter": "15.5.0",
-        "recharts": "2.12.7",
+        "recharts": "2.13.0-alpha.4",
         "remark-gfm": "4.0.0",
         "sharp": " 0.33.4",
         "tailwind-merge": "2.4.0",
