--- a/package.json
+++ b/package.json
@@ -48,6 +48,7 @@
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "@uploadthing/react": "6.7.2",
+        "@vercel/analytics": "^1.3.1",
         "ai": "3.2.24",
         "autoprefixer": "10.4.19",
         "class-variance-authority": "0.7.0",
