--- a/package.json
+++ b/package.json
@@ -48,7 +48,7 @@
         "@types/react": "18.2.21",
         "@types/react-dom": "18.2.7",
         "@uploadthing/react": "6.7.2",
-        "@vercel/analytics": "^1.3.1",
+        "@vercel/analytics": "1.3.1",
         "ai": "3.2.24",
         "autoprefixer": "10.4.19",
         "class-variance-authority": "0.7.0",
@@ -56,16 +56,13 @@
         "date-fns": "3.6.0",
         "eslint": "8.48.0",
         "eslint-config-next": "14.2.5",
-        "framer-motion": "^11.3.6",
+        "framer-motion": "11.3.8",
         "lucide-react": "0.408.0",
-        "next": "14.2.5",
         "next-auth": "4.24.7",
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
-        "react": "18.2.0",
         "react-day-picker": "8.10.1",
-        "react-dom": "18.2.0",
         "react-hook-form": "7.52.1",
         "react-markdown": "9.0.1",
         "react-syntax-highlighter": "15.5.0",
@@ -79,7 +76,25 @@
         "uploadthing": "6.13.2",
         "uuid": "10.0.0",
         "zod": "3.23.8",
-        "zustand": "4.5.4"
+        "zustand": "4.5.4",
+        "@tanstack/react-query": "5.51.9",
+        "@tanstack/react-query-devtools": "5.51.9",
+        "@tiptap/extension-placeholder": "2.5.4",
+        "@tiptap/pm": "2.5.4",
+        "@tiptap/react": "2.5.4",
+        "@tiptap/starter-kit": "2.5.4",
+        "arctic": "1.9.2",
+        "ky": "1.4.0",
+        "lucia": "3.2.0",
+        "next": "14.2.5",
+        "react": "18.2.0",
+        "react-cropper": "2.3.3",
+        "react-dom": "18.2.0",
+        "react-image-file-resizer": "0.4.8",
+        "react-intersection-observer": "9.13.0",
+        "react-linkify-it": "1.0.8",
+        "stream-chat": "8.37.0",
+        "stream-chat-react": "11.23.2"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.13",
@@ -91,14 +106,16 @@
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "autoprefixer": "^10.0.1",
         "eslint": "^8",
-        "eslint-config-next": "14.0.3",
+        "eslint-config-next": "14.2.5",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.7",
         "postcss": "^8",
         "prettier": "3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.3.0",
-        "typescript": "^5"
+        "typescript": "^5",
+
+        "eslint-config-prettier": "^9.1.0"
     },
     "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
 }
