add clerk and convex

--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@ai-sdk/openai": "0.0.36",
+        "@clerk/clerk-react": "^5.2.8",
         "@clerk/nextjs": "5.2.4",
         "@dnd-kit/core": "6.1.0",
         "@dnd-kit/modifiers": "7.0.0",
@@ -63,8 +64,11 @@
         "autoprefixer": "10.4.19",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
+        "convex": "^1.13.2",
         "date-fns": "3.6.0",
+        "drizzle-kit": "0.23.0",
         "drizzle-orm": "0.32.0",
+        "drizzle-zod": "0.5.1",
         "eslint": "8.48.0",
         "eslint-config-next": "14.2.5",
         "framer-motion": "11.3.8",
