--- a/package.json
+++ b/package.json
@@ -118,6 +118,7 @@
         "eslint": "^8",
         "eslint-config-next": "14.2.5",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-import": "^2.29.1",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.7",
         "postcss": "^8",
