--- a/package.json
+++ b/package.json
@@ -67,7 +67,7 @@
         "convex": "^1.13.2",
         "date-fns": "3.6.0",
         "drizzle-kit": "0.23.0",
-        "drizzle-orm": "0.32.0",
+        "drizzle-orm": "0.32.1",
         "drizzle-zod": "0.5.1",
         "eslint": "8.48.0",
         "eslint-config-next": "14.2.5",
@@ -75,22 +75,18 @@
         "ky": "1.4.0",
         "lucia": "3.2.0",
         "lucide-react": "0.408.0",
-        "next": "14.2.5",
-        "next-auth": "4.24.7",
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
-        "react": "18.2.0",
         "react-cropper": "2.3.3",
         "react-day-picker": "8.10.1",
-        "react-dom": "18.2.0",
         "react-hook-form": "7.52.1",
         "react-image-file-resizer": "0.4.8",
         "react-intersection-observer": "9.13.0",
         "react-linkify-it": "1.0.8",
         "react-markdown": "9.0.1",
         "react-syntax-highlighter": "15.5.0",
-        "recharts": "2.13.0-alpha.4",
+        "recharts": "2.12.7",
         "remark-gfm": "4.0.0",
         "sharp": " 0.33.4",
         "stream-chat": "8.37.0",
@@ -102,7 +98,16 @@
         "uploadthing": "6.13.2",
         "uuid": "10.0.0",
         "zod": "3.23.8",
-        "zustand": "4.5.4"
+        "zustand": "4.5.4",
+        "@next/env": "15.0.0-rc.0",
+        "@vercel/postgres": "0.9.0",
+        "bcryptjs": "2.4.3",
+        "next": "15.0.0-rc.0",
+        "next-auth": "5.0.0-beta.19",
+        "react": "19.0.0-rc-f994737d14-20240522",
+        "react-dom": "19.0.0-rc-f994737d14-20240522",
+        "react-is": "19.0.0-rc-85acf2d195-20240711",
+        "use-debounce": "^10.0.1"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.13",
@@ -116,7 +121,6 @@
         "dotenv": "^16.4.5",
         "drizzle-kit": "^0.23.0",
         "eslint": "^8",
-        "eslint-config-next": "14.2.5",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "husky": "^9.0.11",
@@ -125,7 +129,9 @@
         "prettier": "3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.3.0",
-        "typescript": "^5"
+        "typescript": "^5",
+        "@types/bcryptjs": "^2.4.6",
+        "eslint-config-next": "15.0.0-rc.0"
     },
     "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
 }
