add drizzle and connect to neon

--- a/package.json
+++ b/package.json
@@ -16,9 +16,9 @@
         ]
     },
     "dependencies": {
-        "@ai-sdk/openai": "0.0.36",
-        "@clerk/clerk-react": "^5.2.8",
-        "@clerk/nextjs": "5.2.4",
+        "@ai-sdk/openai": "0.0.40",
+        "@clerk/clerk-react": "5.3.1",
+        "@clerk/nextjs": "5.2.12",
         "@dnd-kit/core": "6.1.0",
         "@dnd-kit/modifiers": "7.0.0",
         "@dnd-kit/sortable": "8.0.0",
@@ -46,11 +46,11 @@
         "@radix-ui/react-toast": "1.2.1 ",
         "@radix-ui/react-tooltip": "1.1.2",
         "@radix-ui/react-visually-hidden": "1.1.0",
-        "@tanstack/react-query": "5.51.9",
-        "@tanstack/react-query-devtools": "5.51.9",
-        "@tanstack/react-table": "8.19.3",
-        "@tiptap/extension-placeholder": "2.5.4",
-        "@tiptap/pm": "2.5.4",
+        "@tanstack/react-query": "5.51.21",
+        "@tanstack/react-query-devtools": "5.51.21",
+        "@tanstack/react-table": "8.20.1",
+        "@tiptap/extension-placeholder": "2.5.8",
+        "@tiptap/pm": "2.5.8",
         "@tiptap/react": "2.5.4",
         "@tiptap/starter-kit": "2.5.4",
         "@types/node": "20.5.7",
