--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "@hookform/resolvers": "3.9.0",
         "@neondatabase/serverless": "0.9.4",
         "@next/bundle-analyzer": "14.2.5",
+        "@next/env": "15.0.0-rc.0",
         "@radix-ui/react-accordion": "1.2.0",
         "@radix-ui/react-alert-dialog": "1.1.1",
         "@radix-ui/react-avatar": "1.1.0",
@@ -58,10 +59,12 @@
         "@types/react-dom": "18.2.7",
         "@uploadthing/react": "6.7.2",
         "@vercel/analytics": "1.3.1",
+        "@vercel/postgres": "0.9.0",
         "@vercel/speed-insights": "1.0.12",
         "ai": "3.2.24",
         "arctic": "1.9.2",
         "autoprefixer": "10.4.19",
+        "bcryptjs": "2.4.3",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
         "convex": "^1.13.2",
@@ -75,14 +78,19 @@
         "ky": "1.4.0",
         "lucia": "3.2.0",
         "lucide-react": "0.408.0",
+        "next": "15.0.0-rc.0",
+        "next-auth": "5.0.0-beta.19",
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
+        "react": "19.0.0-rc-f994737d14-20240522",
         "react-cropper": "2.3.3",
         "react-day-picker": "8.10.1",
+        "react-dom": "19.0.0-rc-f994737d14-20240522",
         "react-hook-form": "7.52.1",
         "react-image-file-resizer": "0.4.8",
         "react-intersection-observer": "9.13.0",
+        "react-is": "19.0.0-rc-8269d55d-20240802",
         "react-linkify-it": "1.0.8",
         "react-markdown": "9.0.1",
         "react-syntax-highlighter": "15.5.0",
@@ -96,21 +104,14 @@
         "tailwindcss-animate": "1.0.7",
         "typescript": "5.5.3",
         "uploadthing": "6.13.2",
+        "use-debounce": "^10.0.1",
         "uuid": "10.0.0",
         "zod": "3.23.8",
-        "zustand": "4.5.4",
-        "@next/env": "15.0.0-rc.0",
-        "@vercel/postgres": "0.9.0",
-        "bcryptjs": "2.4.3",
-        "next": "15.0.0-rc.0",
-        "next-auth": "5.0.0-beta.19",
-        "react": "19.0.0-rc-f994737d14-20240522",
-        "react-dom": "19.0.0-rc-f994737d14-20240522",
-        "react-is": "19.0.0-rc-85acf2d195-20240711",
-        "use-debounce": "^10.0.1"
+        "zustand": "4.5.4"
     },
     "devDependencies": {
         "@tailwindcss/typography": "^0.5.13",
+        "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20",
         "@types/react": "^18",
         "@types/react-dom": "^18",
@@ -121,6 +122,7 @@
         "dotenv": "^16.4.5",
         "drizzle-kit": "^0.23.0",
         "eslint": "^8",
+        "eslint-config-next": "15.0.0-rc.0",
         "eslint-config-prettier": "^9.1.0",
         "eslint-plugin-import": "^2.29.1",
         "husky": "^9.0.11",
@@ -129,9 +131,7 @@
         "prettier": "3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.3.0",
-        "typescript": "^5",
-        "@types/bcryptjs": "^2.4.6",
-        "eslint-config-next": "15.0.0-rc.0"
+        "typescript": "^5"
     },
     "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
 }
