--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "dev": "next dev",
+        "dev": "next dev --turbo",
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
@@ -17,6 +17,7 @@
     },
     "dependencies": {
         "@ai-sdk/openai": "0.0.36",
+        "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
         "@clerk/clerk-react": "5.3.1",
         "@clerk/nextjs": "5.2.12",
         "@dnd-kit/core": "6.1.0",
