--- a/package.json
+++ b/package.json
@@ -7,8 +7,8 @@
         "build": "next build",
         "start": "next start",
         "lint": "next lint",
-        "format": "prettier . --write",
-        "prepare": "husky"
+        "prepare": "husky",
+        "format": "prettier --write \"{,!(.next)/**/}*.{js, jsx}\""
     },
     "lint-staged": {
         "**/*": [
@@ -132,7 +132,11 @@
         "prettier": "3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.3.0",
-        "typescript": "^5"
+        "typescript": "^5",
+        "@babel/plugin-transform-typescript": "7.24.6",
+        "eslint-plugin-drizzle": "0.2.3",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-react": "^7.34.2"
     },
     "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
 }
