remove convex and update drizzle

--- a/package.json
+++ b/package.json
@@ -17,7 +17,6 @@
     },
     "dependencies": {
         "@ai-sdk/openai": "0.0.36",
-        "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
         "@clerk/clerk-react": "5.3.1",
         "@clerk/nextjs": "5.2.12",
         "@dnd-kit/core": "6.1.0",
@@ -65,12 +64,11 @@
         "ai": "3.2.24",
         "arctic": "1.9.2",
         "autoprefixer": "10.4.19",
+        "babel-plugin-react-compiler": "0.0.0-experimental-592953e-20240517",
         "bcryptjs": "2.4.3",
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
-        "convex": "^1.13.2",
         "date-fns": "3.6.0",
-        "drizzle-kit": "0.22.8",
         "drizzle-orm": "0.31.4",
         "drizzle-zod": "0.5.1",
         "eslint": "8.48.0",
@@ -105,12 +103,13 @@
         "tailwindcss-animate": "1.0.7",
         "typescript": "5.5.3",
         "uploadthing": "6.13.2",
-        "use-debounce": "^10.0.1",
+        "use-debounce": "10.0.2",
         "uuid": "10.0.0",
         "zod": "3.23.8",
         "zustand": "4.5.4"
     },
     "devDependencies": {
+        "@babel/plugin-transform-typescript": "7.24.6",
         "@tailwindcss/typography": "^0.5.13",
         "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20",
@@ -121,22 +120,21 @@
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "autoprefixer": "^10.0.1",
         "dotenv": "^16.4.5",
-        "drizzle-kit": "^0.23.0",
+        "drizzle-kit": "^0.23.2",
         "eslint": "^8",
         "eslint-config-next": "15.0.0-rc.0",
         "eslint-config-prettier": "^9.1.0",
+        "eslint-plugin-drizzle": "0.2.3",
         "eslint-plugin-import": "^2.29.1",
+        "eslint-plugin-prettier": "^5.1.3",
+        "eslint-plugin-react": "^7.34.2",
         "husky": "^9.0.11",
         "lint-staged": "^15.2.7",
         "postcss": "^8",
         "prettier": "3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.14",
         "tailwindcss": "^3.3.0",
-        "typescript": "^5",
-        "@babel/plugin-transform-typescript": "7.24.6",
-        "eslint-plugin-drizzle": "0.2.3",
-        "eslint-plugin-prettier": "^5.1.3",
-        "eslint-plugin-react": "^7.34.2"
+        "typescript": "^5"
     },
     "packageManager": "pnpm@9.1.3+sha512.7c2ea089e1a6af306409c4fc8c4f0897bdac32b772016196c469d9428f1fe2d5a21daf8ad6512762654ac645b5d9136bb210ec9a00afa8dbc4677843ba362ecd"
 }
