--- a/package.json
+++ b/package.json
@@ -120,7 +120,7 @@
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "autoprefixer": "^10.0.1",
         "dotenv": "^16.4.5",
-        "drizzle-kit": "^0.23.2",
+        "drizzle-kit": "0.22.8",
         "eslint": "^8",
         "eslint-config-next": "15.0.0-rc.0",
         "eslint-config-prettier": "^9.1.0",
