--- a/package.json
+++ b/package.json
@@ -77,6 +77,7 @@
         "ky": "1.4.0",
         "lucia": "3.2.0",
         "lucide-react": "0.408.0",
+        "moment": "2.30.1",
         "next": "15.0.0-rc.0",
         "next-auth": "5.0.0-beta.19",
         "next-themes": "0.3.0",
