--- a/package.json
+++ b/package.json
@@ -97,6 +97,7 @@
         "recharts": "2.12.7",
         "remark-gfm": "4.0.0",
         "sharp": " 0.33.4",
+        "sonner": "1.5.0",
         "stream-chat": "8.37.0",
         "stream-chat-react": "11.23.2",
         "tailwind-merge": "2.4.0",
