bar chart work again

--- a/package.json
+++ b/package.json
@@ -78,19 +78,19 @@
         "lucia": "3.2.0",
         "lucide-react": "0.408.0",
         "moment": "2.30.1",
-        "next": "15.0.0-rc.0",
-        "next-auth": "5.0.0-beta.19",
+        "next": "14.2.3",
+        "react": "^18",
+        "react-dom": "^18",
+        "next-auth": "4.24.7",
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
-        "react": "19.0.0-rc-f994737d14-20240522",
         "react-cropper": "2.3.3",
         "react-day-picker": "8.10.1",
-        "react-dom": "19.0.0-rc-f994737d14-20240522",
         "react-hook-form": "7.52.1",
         "react-image-file-resizer": "0.4.8",
         "react-intersection-observer": "9.13.0",
-        "react-is": "19.0.0-rc-8269d55d-20240802",
+        "react-is": "18.3.1",
         "react-linkify-it": "1.0.8",
         "react-markdown": "9.0.1",
         "react-syntax-highlighter": "15.5.0",
