--- a/package.json
+++ b/package.json
@@ -23,10 +23,15 @@
         "@dnd-kit/modifiers": "7.0.0",
         "@dnd-kit/sortable": "8.0.0",
         "@dnd-kit/utilities": "3.2.2",
+        "@emotion/react": "11.13.0",
+        "@emotion/styled": "11.13.0",
+        "@fontsource/roboto": "5.0.14",
         "@hookform/resolvers": "3.9.0",
+        "@mui/icons-material": "5.16.7",
+        "@mui/material": "5.16.7",
         "@neondatabase/serverless": "0.9.4",
         "@next/bundle-analyzer": "14.2.5",
-        "@next/env": "15.0.0-rc.0",
+        "@next/env": "14.2.5",
         "@radix-ui/react-accordion": "1.2.0",
         "@radix-ui/react-alert-dialog": "1.1.1",
         "@radix-ui/react-avatar": "1.1.0",
@@ -79,14 +84,14 @@
         "lucide-react": "0.408.0",
         "moment": "2.30.1",
         "next": "14.2.3",
-        "react": "^18",
-        "react-dom": "^18",
         "next-auth": "4.24.7",
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
+        "react": "^18",
         "react-cropper": "2.3.3",
         "react-day-picker": "8.10.1",
+        "react-dom": "^18",
         "react-hook-form": "7.52.1",
         "react-image-file-resizer": "0.4.8",
         "react-intersection-observer": "9.13.0",
