--- a/package.json
+++ b/package.json
@@ -139,6 +139,7 @@
         "postcss": "^8",
         "prettier": "3.0.3",
         "prettier-plugin-tailwindcss": "^0.5.14",
+        "tailwind-scrollbar": "^3.1.0",
         "tailwindcss": "^3.3.0",
         "typescript": "^5"
     },
