--- a/package.json
+++ b/package.json
@@ -84,6 +84,7 @@
         "lucide-react": "0.408.0",
         "moment": "2.30.1",
         "next": "14.2.3",
+        "next-intl": "^3.17.3",
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
