--- a/package.json
+++ b/package.json
@@ -27,6 +27,7 @@
         "@emotion/styled": "11.13.0",
         "@fontsource/roboto": "5.0.14",
         "@hookform/resolvers": "3.9.0",
+        "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
         "@mui/icons-material": "5.16.7",
         "@mui/material": "5.16.7",
         "@neondatabase/serverless": "0.9.4",
