--- a/package.json
+++ b/package.json
@@ -17,8 +17,6 @@
     },
     "dependencies": {
         "@ai-sdk/openai": "0.0.36",
-        "@clerk/clerk-react": "5.3.1",
-        "@clerk/nextjs": "5.2.12",
         "@dnd-kit/core": "6.1.0",
         "@dnd-kit/modifiers": "7.0.0",
         "@dnd-kit/sortable": "8.0.0",
@@ -30,7 +28,6 @@
         "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
         "@mui/icons-material": "5.16.7",
         "@mui/material": "5.16.7",
-        "@neondatabase/serverless": "0.9.4",
         "@next/bundle-analyzer": "14.2.5",
         "@next/env": "14.2.5",
         "@radix-ui/react-accordion": "1.2.0",
@@ -75,8 +72,6 @@
         "class-variance-authority": "0.7.0",
         "clsx": "2.1.1",
         "date-fns": "3.6.0",
-        "drizzle-orm": "0.31.4",
-        "drizzle-zod": "0.5.1",
         "eslint": "8.48.0",
         "eslint-config-next": "14.2.5",
         "framer-motion": "11.3.8",
@@ -106,6 +101,7 @@
         "sonner": "1.5.0",
         "stream-chat": "8.37.0",
         "stream-chat-react": "11.23.2",
+        "stripe": "^16.8.0",
         "tailwind-merge": "2.4.0",
         "tailwindcss": "3.4.5",
         "tailwindcss-animate": "1.0.7",
@@ -118,6 +114,7 @@
     },
     "devDependencies": {
         "@babel/plugin-transform-typescript": "7.24.6",
+        "@prisma/client": "^5.18.0",
         "@tailwindcss/typography": "^0.5.13",
         "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20",
@@ -128,11 +125,9 @@
         "@typescript-eslint/eslint-plugin": "^6.11.0",
         "autoprefixer": "^10.0.1",
         "dotenv": "^16.4.5",
-        "drizzle-kit": "0.22.8",
         "eslint": "^8",
         "eslint-config-next": "15.0.0-rc.0",
         "eslint-config-prettier": "^9.1.0",
-        "eslint-plugin-drizzle": "0.2.3",
         "eslint-plugin-import": "^2.29.1",
         "eslint-plugin-prettier": "^5.1.3",
         "eslint-plugin-react": "^7.34.2",
