--- a/package.json
+++ b/package.json
@@ -25,7 +25,7 @@
         "@emotion/styled": "11.13.0",
         "@fontsource/roboto": "5.0.14",
         "@hookform/resolvers": "3.9.0",
-        "@kinde-oss/kinde-auth-nextjs": "^2.3.6",
+        "@kinde-oss/kinde-auth-nextjs": "2.3.8",
         "@mui/icons-material": "5.16.7",
         "@mui/material": "5.16.7",
         "@next/bundle-analyzer": "14.2.5",
@@ -80,14 +80,14 @@
         "lucide-react": "0.408.0",
         "moment": "2.30.1",
         "next": "14.2.3",
-        "next-intl": "^3.17.3",
+        "next-intl": "3.19.0",
         "next-themes": "0.3.0",
         "nextjs-toploader": "1.6.12",
         "postcss": "8.4.39",
-        "react": "^18",
+        "react": "18.3.1",
         "react-cropper": "2.3.3",
         "react-day-picker": "8.10.1",
-        "react-dom": "^18",
+        "react-dom": "18.3.1",
         "react-hook-form": "7.52.1",
         "react-image-file-resizer": "0.4.8",
         "react-intersection-observer": "9.13.0",
@@ -101,7 +101,7 @@
         "sonner": "1.5.0",
         "stream-chat": "8.37.0",
         "stream-chat-react": "11.23.2",
-        "stripe": "^16.8.0",
+        "stripe": "16.9.0",
         "tailwind-merge": "2.4.0",
         "tailwindcss": "3.4.5",
         "tailwindcss-animate": "1.0.7",
@@ -114,7 +114,7 @@
     },
     "devDependencies": {
         "@babel/plugin-transform-typescript": "7.24.6",
-        "@prisma/client": "^5.18.0",
+        "@prisma/client": "5.18.0",
         "@tailwindcss/typography": "^0.5.13",
         "@types/bcryptjs": "^2.4.6",
         "@types/node": "^20",
